add content for opportunities page

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -999,7 +999,7 @@
                     <div class="blog-position">
                         <div class="col-md-3">
                             <article class="tiles">
-                                <div class="pic">
+                                <div class=""><!-- class pic pour surligner 'image et proposition read more-->
                                     <img src="assets/images/blog/01.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
@@ -1008,18 +1008,18 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Title post
+                                        Technique
                                     </h3>
-                                    <span class="date">
-                                        March 14, 2017
-                                    </span>
-                                    <p>
-                                        Sed congue id nisl sit amet sollicitudin. Sed tempor ex eu lacus hendrerit, eget tincidunt neque commodo. Morbi id maximus nisl. Suspendisse nec odio semper...
-                                    </p>
-                                    <ul class="post-info">
-                                        <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
-                                        <li><a href="#"><i class="fa fa-comment"></i>396</a></li>
+                                    <br/>
+                                   <ul>
+                                        <li>Développeur</li>
+                                        <li>Expert</li>
+                                        <li>Consultant technique</li>
+                                        <li>Ingénieur système</li>
+                                        <li>Chercheur</li>
                                     </ul>
+                                    
+                                   
                                 </div>
                                 <!-- /.tiles-content -->
                             </article>
@@ -1028,7 +1028,7 @@
                         <!-- /.col -->
                         <div class="col-md-3">
                             <article class="tiles">
-                                <div class="pic">
+                                <div class=""><!-- class pic pour surligner 'image et proposition read more-->
                                     <img src="assets/images/blog/02.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
@@ -1037,18 +1037,20 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Title post
+                                        Commercial
                                     </h3>
-                                    <span class="date">
-                                        March 12, 2017
-                                    </span>
-                                    <p>
-                                        Sed congue id nisl sit amet sollicitudin. Sed tempor ex eu lacus hendrerit, eget tincidunt neque commodo. Morbi id maximus nisl. Suspendisse nec odio semper...
-                                    </p>
-                                    <ul class="post-info">
-                                        <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
-                                        <li><a href="#"><i class="fa fa-comment"></i>257</a></li>
+                                    <br/>
+                                    <ul>
+                                        <li>Ingénieur d'affaire</li>
+                                        <li>Responsable de compte</li>
+                                        <li>Ingénieur avant vente</li>
+                                        <li><br/></li>
+                                        <li><br/></li>
+                                        
                                     </ul>
+                                       
+                            
+                                    
                                 </div>
                                 <!-- /.tiles-content -->
                             </article>
@@ -1057,7 +1059,7 @@
                         <!-- /.col -->
                         <div class="col-md-3">
                             <article class="tiles">
-                                <div class="pic">
+                                <div class=""><!-- class pic pour surligner 'image et proposition read more-->
                                     <img src="assets/images/blog/03.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
@@ -1066,18 +1068,17 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Title post
+                                        Organisationnel
                                     </h3>
-                                    <span class="date">
-                                        March 10, 2017
-                                    </span>
-                                    <p>
-                                        Sed congue id nisl sit amet sollicitudin. Sed tempor ex eu lacus hendrerit, eget tincidunt neque commodo. Morbi id maximus nisl. Suspendisse nec odio semper...
-                                    </p>
-                                    <ul class="post-info">
-                                        <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
-                                        <li><a href="#"><i class="fa fa-comment"></i>147</a></li>
+                                    <br/>
+                                     <ul>
+                                        <li>Directeur informatique (DI, DSI, CIO, CSO, CDO ...)</li>
+                                        <li>Directeur de production</li>
+                                        <li>Consultant organisationnel</li>
+                                        <li><br/></li>
+                                        
                                     </ul>
+                                       
                                 </div>
                                 <!-- /.tiles-content -->
                             </article>
@@ -1086,7 +1087,7 @@
                         <!-- /.col -->
                         <div class="col-md-3">
                             <article class="tiles">
-                                <div class="pic">
+                                <div class=""><!-- class pic pour surligner 'image et proposition read more-->
                                     <img src="assets/images/blog/03.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
@@ -1095,24 +1096,25 @@
                                 <!-- /.pic -->
                                 <div class="tiles-content">
                                     <h3 class="blog-title">
-                                        Title post
+                                        Pluriel
                                     </h3>
-                                    <span class="date">
-                                        March 10, 2017
-                                    </span>
-                                    <p>
-                                        Sed congue id nisl sit amet sollicitudin. Sed tempor ex eu lacus hendrerit, eget tincidunt neque commodo. Morbi id maximus nisl. Suspendisse nec odio semper...
-                                    </p>
-                                    <ul class="post-info">
-                                        <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
-                                        <li><a href="#"><i class="fa fa-comment"></i>147</a></li>
+                                    <br/>
+                                     <ul>
+                                        <li>Architecte</li>
+                                        <li>Chef de projet</li>
+                                        <li>Ingénieur méthode / qualité</li>
+                                        <li>Assistant maîtrise d'ouvrage</li>
+                                        <li>Business développeur</li>
+                                        
                                     </ul>
+                                       
                                 </div>
                                 <!-- /.tiles-content -->
                             </article>
                             <!-- /.tiles -->
                         </div>
                         <!-- /.col -->
+                        
                     </div>
                     <!-- /.blog-position-->
                 </div>
