correct bug for opportunities page

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1000,7 +1000,7 @@
                         <div class="col-md-3">
                             <article class="tiles">
                                 <div class=""><!-- class pic pour surligner 'image et proposition read more-->
-                                    <img src="assets/images/blog/01.jpg" alt="blog">
+                                    <img src="assets/images/blog/technique.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
                                     </ul>
@@ -1029,7 +1029,7 @@
                         <div class="col-md-3">
                             <article class="tiles">
                                 <div class=""><!-- class pic pour surligner 'image et proposition read more-->
-                                    <img src="assets/images/blog/02.jpg" alt="blog">
+                                    <img src="assets/images/blog/commercial.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
                                     </ul>
@@ -1060,7 +1060,7 @@
                         <div class="col-md-3">
                             <article class="tiles">
                                 <div class=""><!-- class pic pour surligner 'image et proposition read more-->
-                                    <img src="assets/images/blog/03.jpg" alt="blog">
+                                    <img src="assets/images/blog/organisation.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
                                     </ul>
@@ -1088,7 +1088,7 @@
                         <div class="col-md-3">
                             <article class="tiles">
                                 <div class=""><!-- class pic pour surligner 'image et proposition read more-->
-                                    <img src="assets/images/blog/03.jpg" alt="blog">
+                                    <img src="assets/images/blog/pluriel.jpg" alt="blog">
                                     <ul class="more">
                                         <li><a href="blog-single-post-image.html">Read More</a></li>
                                     </ul>
