add opportunities in navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,17 +25,18 @@
           <a class="page-scroll" href="#pricing">Modules</a>
         </li>
         <li>
+          <a class="page-scroll" href="#features">Projets</a>
+        </li>
+        <li>
           <a class="page-scroll" href="#faq">Liste des matieres</a>
         </li>
         <li>
-          <a class="page-scroll" href="#features">Projets</a>
+          <a class="page-scroll" href="#blog">Les débouchés</a>
         </li>
         <li>
           <a class="page-scroll" href="#review">Témoignages</a>
         </li>
-        <li>
-          <a class="page-scroll" href="#blog">Blog</a>
-        </li>
+        
       </ul>
     </div>
   </div>
