change section id #blog to #opportunities

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,7 +31,7 @@
           <a class="page-scroll" href="#faq">Liste des matieres</a>
         </li>
         <li>
-          <a class="page-scroll" href="#blog">Les débouchés</a>
+          <a class="page-scroll" href="#opportunities">Les débouchés</a>
         </li>
         <li>
           <a class="page-scroll" href="#review">Témoignages</a>
