--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -989,7 +989,7 @@
         <!-- download -->
 
 
-        <section id="blog" class="blog white-bg">
+        <section id="opportunities" class="blog white-bg">
             <div class="container">
                 <div class="row">
                     <div class="section-title">
