Change content from modules

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -99,9 +99,8 @@
                   </div>
                   <p class="pricing-content">
                     Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité
-                    toujours plus grandes, notamment via la technologie de l'IoT (Internet of Things)
+                    toujours plus grandes.
                   </p>
-                  <hr>
                 </div>
                 <!-- /.pricing-table -->
               </div>
@@ -113,9 +112,8 @@
                   </div>
                   <p class="pricing-content">
                     Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique
-                    Découverte des technologies Cloud (Public, privé et hybride) et du Big Data.
+                    Découverte des technologies Cloud et du Big Data.
                   </p>
-                  <hr>
                 </div>
                 <!-- /.pricing-table -->
               </div>
@@ -126,9 +124,9 @@
                     <h3 class="heading">Leadership et management</h3>
                   </div>
                   <p class="pricing-content">
-                    Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT
+                    Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT et de former les managers de demain.
+                    <br/>
                   </p>
-                  <hr>
                 </div>
                 <!-- /.pricing-table -->
               </div>
@@ -139,7 +137,7 @@
                     <h3 class="heading gradient-text">Digitalisation et Transformation</h3>
                   </div>
                   <p class="pricing-content">
-                    Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT
+                    Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.
                   </p>
                   
                 </div>
