Rename blog header and Project names

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -208,7 +208,7 @@
     <div class="row">
       <div class="section-title">
         <div class="subtitle">Blog</div>
-        <h2>Latest <span class="gradient-text-02">Post</span></h2>
+        <h2>Le blog <span class="gradient-text-02">SIGL</span></h2>
       </div>
       <hr class="hr-title-04">
       <div class="col-md-7 mb-30">
@@ -380,7 +380,7 @@
             <div class="container">
                 <div class="row features">
                     <div class="section-title">
-                        <h2>Projets</h2>
+                        <h2>Nos Projets</h2>
                     </div>
                     <hr class="hr-title-01 hr-icon">
                     <div class="features-content">
@@ -390,7 +390,7 @@
                                     <span><img src="./assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">Cloud Hybride</h4>
+                                    <h4 class="text-center">Architecture Cloud</h4>
                                     <p>
                                         Création d'un Cloud à la fois public et privé à l'aide d'Openstack et de services PaaS tel qu'AWS et Azure.
                                     </p>
@@ -403,7 +403,7 @@
                                     <span><img src="./assets/images/assetProject/bcase.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">VIRT</h4>
+                                    <h4 class="text-center">Virtualisation</h4>
                                     <p>
                                         Réalisation de Business cases projets se basant sur des lignes de coûts et des leviers d’économies.
 
@@ -430,7 +430,7 @@
                                     <span><img src="./assets/images/assetProject/pae.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">PAE</h4>
+                                    <h4 class="text-center">Product & Experiment</h4>
                                     <p>
                                        Projet avec entreprise tout le long de l'année; <br/>
                                        SIGL, RE, Société Général, KornFerry, GN...
@@ -444,7 +444,7 @@
                                     <span><img src="./assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">URSI</h4>
+                                    <h4 class="text-center">Urbanisation des SI</h4>
                                     <p>
                                         Développement d'un SI  simulant le comportement d'une société de distibution tel que la Fnac et Darty.
                                     </p>
