Add embed Twitter TL

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1230,6 +1230,9 @@
       </div>
       <!-- /.col -->
     </div>
+    <div class="col-md-6">
+    <a class="twitter-timeline" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
+    </div>
     <!-- /.row -->
   </div>
   <!-- /.container -->
