Clean integration of twitter

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -444,7 +444,7 @@
                                     <span><img src="./assets/images/assetProject/ursi.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">Urbanisation des SI</h4>
+                                    <h4 class="text-center"><a routerLink='/modules'>Urbanisation des SI</a></h4>
                                     <p>
                                         Développement d'un SI  simulant le comportement d'une société de distibution tel que la Fnac et Darty.
                                     </p>
@@ -1112,6 +1112,20 @@
             <!-- /.container -->
         </section>
 
+        <section id="socials" class="blob white-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>Nos Réseaux sociaux</h2>
+                    </div>
+                    <hr class="hr-title-01 hr-icon">
+                    <div class="col-md-6">
+                        <a class="twitter-timeline" data-height="500" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
 
@@ -1229,9 +1243,6 @@
         </ul>
       </div>
       <!-- /.col -->
-    </div>
-    <div class="col-md-6">
-    <a class="twitter-timeline" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
     </div>
     <!-- /.row -->
   </div>
