Add cute facebook button

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1122,6 +1122,9 @@
                     <div class="col-md-6">
                         <a class="twitter-timeline" data-height="500" href="https://twitter.com/SIGL_EPITA">Tweets by SIGL_EPITA</a>
                     </div>
+                    <div class="col-md-6">
+                        <a href="#" class="dark-btn"> <i class="fa fa-facebook"></i>             Nous rejoindre sur Facebook</a>
+                    </div>
                 </div>
             </div>
         </section>
