--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,25 +16,25 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a class="page-scroll" href="#hero">Accueil</a>
+          <a class="page-scroll" href="#hero">{{'Home' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="#about">A propos</a>
+          <a class="page-scroll" href="#about">{{'About' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="#pricing">Modules</a>
+          <a class="page-scroll" href="#pricing">{{'Modules' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="#features">Projets</a>
+          <a class="page-scroll" href="#features">{{'Projects' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="#faq">Liste des matieres</a>
+          <a class="page-scroll" href="#faq">{{'Disciplines' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="#opportunities">Les débouchés</a>
+          <a class="page-scroll" href="#opportunities">{{'Careers' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="#review">Témoignages</a>
+          <a class="page-scroll" href="#review">{{'Testimonies' | translate}}</a>
         </li>
         
       </ul>
