Comment blog feature for prez and add "About" section in FR

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -45,10 +45,7 @@
           <div class="post-about negative-margin">
             <h3 class="gradient-text">A Propos de SIGL</h3>
             <p>
-              Nam et sagittis diam. Sed tempor augue sit amet egestas scelerisque. Orci varius natoque penatibus et magnis dis parturient
-              montes, nascetur ridiculus mus. In ullamcorper molestie enim sed condimentum. Nulla lacinia sem et elit ornare,
-              a feugiat est volutpat. Mauris ac orci id est molestie scelerisque eget sed diam. Quisque ornare sollicitudin
-              velit suspendisse potenti. Nunc mattis sapien nec mi dictum feugiat. Pellentesque vehicula consectetur commodo...
+                Les entreprises ont à développer des systèmes d'informations et des logiciels complexes dont les qualités principales sont la capacité à évoluer, la fiabilité et la performance. Les besoins des entreprises évoluent toujours plus rapidement avec l'apparition de nouveaux acteurs et des modèles économiques disruptifs soutenus par la promesse de nouvelles technologies hyper connectées et toujours moins chères à utiliser. Il faut donc aller plus vite pour transformer l'existant et pour créer les nouveaux services métiers d'aujourd'hui et de demain : être totalement présent sur Internet, s'interconnecter avec tous les systèmes d'information de l'entreprise et à un écosystème toujours plus vaste, proposer de nouveaux e-services en temps réel, mieux connaître ses clients
             </p>
           </div>
           <!-- /.post-about -->
@@ -206,6 +203,7 @@
 <!-- review -->
 <!-- /.reviews -->
 <!-- blog -->
+<!--
 <section id="blog" class="blog white-bg">
   <div class="container">
     <div class="row">
@@ -219,12 +217,11 @@
           <header class="card-thumb">
             <img src="./assets/images/blog/03.jpg" alt="blog">
           </header>
-          <!-- /.header -->
+
           <div class="card-date">
             <span class="card-date-day">06</span>
             <span class="card-date-month">Apr</span>
           </div>
-          <!-- /.card-date -->
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Lacus elementum pellentesque</div>
@@ -233,29 +230,29 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-          <!-- /.card-body -->
+ 
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
               <li><a href="#"><i class="fa fa-comments"></i>97</a></li>
             </ul>
           </footer>
-          <!-- /.footer -->
+
         </article>
-        <!-- /.card -->
+
       </div>
-      <!-- /.col -->
+
       <div class="col-md-5 mb-30">
         <article class="card">
           <header class="card-thumb">
             <img src="./assets/images/blog/05.jpg" alt="blog">
           </header>
-          <!-- /.header -->
+
           <div class="card-date">
             <span class="card-date-day">05</span>
             <span class="card-date-month">Apr</span>
           </div>
-          <!-- /.card-date -->
+
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Lacus elementum pellentesque</div>
@@ -264,30 +261,30 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-          <!-- /.card-body -->
+
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
               <li><a href="#"><i class="fa fa-comments"></i>219</a></li>
             </ul>
           </footer>
-          <!-- /.footer -->
+
         </article>
-        <!-- /.card -->
+
       </div>
-      <!-- /.col -->
+
       <div class="clearfix"></div>
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
             <img src="./assets/images/blog/01.jpg" alt="blog">
           </header>
-          <!-- /.header -->
+
           <div class="card-date">
             <span class="card-date-day">04</span>
             <span class="card-date-month">Apr</span>
           </div>
-          <!-- /.card-date -->
+ 
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Nullam cursus condimentum</div>
@@ -296,29 +293,29 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-          <!-- /.card-body -->
+
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
               <li><a href="#"><i class="fa fa-comments"></i>257</a></li>
             </ul>
           </footer>
-          <!-- /.footer -->
+     
         </article>
-        <!-- /.card -->
+
       </div>
-      <!-- /.col -->
+
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
             <img src="./assets/images/blog/02.jpg" alt="blog">
           </header>
-          <!-- /.header -->
+     
           <div class="card-date">
             <span class="card-date-day">03</span>
             <span class="card-date-month">Apr</span>
           </div>
-          <!-- /.card-date -->
+
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Lacus elementum pellentesque</div>
@@ -327,29 +324,29 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-          <!-- /.card-body -->
+       
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
               <li><a href="#"><i class="fa fa-comments"></i>359</a></li>
             </ul>
           </footer>
-          <!-- /.footer -->
+
         </article>
-        <!-- /.card -->
+       
       </div>
-      <!-- /.col -->
+  
       <div class="col-md-4 mb-30">
         <article class="card">
           <header class="card-thumb">
             <img src="./assets/images/blog/03.jpg" alt="blog">
           </header>
-          <!-- /.header -->
+      
           <div class="card-date">
             <span class="card-date-day">02</span>
             <span class="card-date-month">Apr</span>
           </div>
-          <!-- /.card-date -->
+          
           <div class="card-body">
             <h3 class="card-title"><a href="blog-single-post-image.html">Blog Title</a></h3>
             <div class="card-subtitle">Suspendisse sollicitudin nulla</div>
@@ -358,22 +355,22 @@
               ex neque, quis facilisis tortor scelerisque vel. In ac quam finibus, pharetra mauris vel, aliquam augue...
             </p>
           </div>
-          <!-- /.card-body -->
+       
           <footer class="card-footer text-center">
             <ul class="post-info">
               <li><a href="#"><i class="fa fa-tag"></i>tags</a></li>
               <li><a href="#"><i class="fa fa-comments"></i>181</a></li>
             </ul>
           </footer>
-          <!-- /.footer -->
+         
         </article>
-        <!-- /.card -->
+    
       </div>
-      <!-- /.col -->
+  
     </div>
-    <!-- /.row -->
+   
   </div>
-  <!-- /.container -->
+
 </section>
 <!-- /.blog -->
 
