Add english content

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -43,9 +43,9 @@
         <!-- /.col -->
         <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="post-about negative-margin">
-            <h3 class="gradient-text">A Propos de SIGL</h3>
+            <h3 class="gradient-text">{{'About SIGL' | translate}}</h3>
             <p>
-                Les entreprises ont à développer des systèmes d'informations et des logiciels complexes dont les qualités principales sont la capacité à évoluer, la fiabilité et la performance. Les besoins des entreprises évoluent toujours plus rapidement avec l'apparition de nouveaux acteurs et des modèles économiques disruptifs soutenus par la promesse de nouvelles technologies hyper connectées et toujours moins chères à utiliser. Il faut donc aller plus vite pour transformer l'existant et pour créer les nouveaux services métiers d'aujourd'hui et de demain : être totalement présent sur Internet, s'interconnecter avec tous les systèmes d'information de l'entreprise et à un écosystème toujours plus vaste, proposer de nouveaux e-services en temps réel, mieux connaître ses clients
+                {{"AboutText" | translate}}
             </p>
           </div>
           <!-- /.post-about -->
@@ -73,7 +73,7 @@
     <div class="row">
       <div class="col-md-12 pricing-col">
         <div class="section-title-01">
-          <h2>Les Modules <span class="gradient-text">SIGL</span></h2>
+          <h2>{{"Modules" | translate}} <span class="gradient-text">SIGL</span></h2>
         </div>
         <br/>
         <section>
@@ -82,8 +82,7 @@
 </section>
         <hr class="hr-title-02">
         <p>
-          Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun
-          une partie de la culture et des connaissances requises pour construire les technologies de demain.
+          {{"ModulesIntro" | translate}}
         </p>
 
       </div>
@@ -95,11 +94,10 @@
               <div class="col-md-3 col-sm-3 col-xs12 np">
                 <div class="pricing-table">
                   <div class="pricing-table-header">
-                    <h3 class="heading">Mobilité et Applications</h3>
+                    <h3 class="heading">{{"M&A" | translate}}</h3>
                   </div>
                   <p class="pricing-content">
-                    Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité
-                    toujours plus grandes.
+                    {{"M&AText" | translate}}
                   </p>
                 </div>
                 <!-- /.pricing-table -->
@@ -108,11 +106,10 @@
               <div class="col-md-3 col-sm-3 col-xs12 np">
                 <div class="pricing-table best">
                   <div class="pricing-table-header">
-                    <h3 class="heading gradient-text">Cloud et architecture</h3>
+                    <h3 class="heading gradient-text">{{"C&A" | translate}}</h3>
                   </div>
                   <p class="pricing-content">
-                    Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique
-                    Découverte des technologies Cloud et du Big Data.
+                    {{"C&AText" | translate}}
                   </p>
                 </div>
                 <!-- /.pricing-table -->
@@ -121,10 +118,10 @@
               <div class="col-md-3 col-sm-3 col-xs12 np">
                 <div class="pricing-table">
                   <div class="pricing-table-header">
-                    <h3 class="heading">Leadership et management</h3>
+                    <h3 class="heading">{{"L&M" | translate}}</h3>
                   </div>
                   <p class="pricing-content">
-                    Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT et de former les managers de demain.
+                    {{"L&MText" | translate}}
                     <br/>
                   </p>
                 </div>
@@ -134,10 +131,10 @@
               <div class="col-md-3 col-sm-3 col-xs12 np">
                 <div class="pricing-table best">
                   <div class="pricing-table-header">
-                    <h3 class="heading gradient-text">Digitalisation et Transformation</h3>
+                    <h3 class="heading gradient-text">{{"D&T" | translate}}</h3>
                   </div>
                   <p class="pricing-content">
-                    Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.
+                      {{"D&TText" | translate}}
                   </p>
                   
                 </div>
