More english Content

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -377,7 +377,7 @@
             <div class="container">
                 <div class="row features">
                     <div class="section-title">
-                        <h2>Nos Projets</h2>
+                        <h2>{{"Proj" | translate}}</h2>
                     </div>
                     <hr class="hr-title-01 hr-icon">
                     <div class="features-content">
@@ -387,9 +387,9 @@
                                     <span><img src="./assets/images/assetProject/cloud.jpg" width="70" height="70"/></span>
                                 </div>
                                 <div class="info">
-                                    <h4 class="text-center">Architecture Cloud</h4>
+                                    <h4 class="text-center">{{"ARCL" | translate}}</h4>
                                     <p>
-                                        Création d'un Cloud à la fois public et privé à l'aide d'Openstack et de services PaaS tel qu'AWS et Azure.
+                                    {{ "ARCLText" | translate}}                                  
                                     </p>
                                 </div>
                             </div>
